# synqc-temporal-dynamics-series-hybrid-controller-

./: .dockerignore  .env.example  .gitignore  Dockerfile  PHYSICS_CONTRACT_INTEGRATION_NOTES.md  README.md  adam_nova_grover_notebook.ipynb  docker-compose.hosted.yml  docker-compose.sandbox.yml  docker-compose.yml  docker-start.sh  synqc_run_bundle_analysis.ipynb  test-cors.html
.devcontainer/: Dockerfile  devcontainer.json
archives/: README.md
archives/addons/synqc_shor_addon_v2/: Dockerfile  pyproject.toml
archives/addons/synqc_shor_addon_v2/synqc_shor_addon_v2/: INTEGRATION_NOTES.md
archives/addons/synqc_shor_addon_v2/synqc_shor_addon_v2/backend/: run_demo_app.py
archives/addons/synqc_shor_addon_v2/synqc_shor_addon_v2/backend/synqc_shor/: __init__.py  api.py  config.py  factor.py  rsa.py
archives/addons/synqc_shor_addon_v2/synqc_shor_addon_v2/frontend/: shor-panel.js
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/ops/: prometheus-ci-scrape.yml  prometheus-synqc-example.yml  synqc-alerts.yml
backend/scripts/: build_qiskit_cache.sh  dev_install.sh  load_test.py  quickstart_health_check.py
backend/synqc_backend/: __init__.py  api.py  audit_agents.py  bench_store.py  budget.py  config.py  consumer_api.py  consumer_api.py.BAK  control_profiles.py  engine.py  grover.py  grover_utils.py  hardware_backends.py  job_store.py  jobs.py  kpi_estimators.py  logging_utils.py  metrics.py  metrics_recorder.py  middleware.py  models.py  physics_contract.py  physics_definitions.py  physics_router.py  provider_clients.py  qiskit_provider.py  qubit_usage.py  queueing.py  redis_bus.py  redis_client.py  redis_healthcheck.py  run_queue.py  settings.py  stats.py  storage.py  worker.py  worker_service.py
backend/synqc_backend/agents/: __init__.py  base.py  echo.py  grover.py  multicall.py  registry.py
backend/synqc_backend/auth/: __init__.py  deps.py  routes.py  schemas.py  security.py  store.py
backend/synqc_backend/orchestration/: __init__.py  call_client.py  event_store.py  workflow.py
backend/synqc_backend/providers/: __init__.py
backend/tests/: test_budget_error_detail.py  test_budget_exhaustion_http.py  test_control_profiles.py  test_grover_utils.py  test_hardware_targets.py  test_hosted_compose_smoke.py  test_httpx_loader.py  test_kpi_details_from_counts.py  test_metrics_exporter_guard.py  test_metrics_exporter_isolation.py  test_metrics_shared_endpoint.py  test_overbudget_listing.py  test_provider_health_metrics.py  test_provider_live_clients.py  test_provider_metrics_logging.py  test_provider_simulation_block.py  test_provider_smoke_flags.py  test_provider_validation_paths.py  test_qiskit_provider_client.py  test_qubit_usage.py  test_redis_bus.py  test_redis_healthcheck.py  test_security.py  test_shot_scaling.py  test_worker_metrics_endpoint.py
docker/: nginx.conf  prometheus.yml
docs/: Codex_Hosted_Instructions.md  Dual_Clocking_Qubits_Integration.md  Hosted_Demo.md  Hosted_Mode.md  Process_and_System_Instructions.md  Repository_Analysis.md  SYNQC_FULLSTACK_ONEFILE_v0.4.md  SynQc_Definitions_and_Measurement_Model_v0_1.md  SynQc_Temporal_Dynamics_Series_Technical_Archive_v0_1.md  agentic-process-report.md  docker_installation_blockers.md  zip_analysis.md
gpt/: SynQc_GPT_Pro_Context_Instructions_v0_1.md
sandbox/: policy.yaml  storage.yaml
scripts/: fetch_dual_clocking_tool.sh  generate_hosted_secrets.py  verify_web_proxy.sh
synqc_hosted_pack_v2/: docker-compose.hosted.yml
utils/: install_deps.py
(+47 files in other folders)
