[project]
name = "synqc-tds-backend"
version = "0.1.0"
description = "Backend API and engine for SynQc Temporal Dynamics Series (SynQc TDS) console."
requires-python = ">=3.12"
authors = [{name = "Adam & Nova (eVision)"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "redis>=5.0.0",
    "numpy>=2.0.0",
    "prometheus-client>=0.21.0"
]

[project.optional-dependencies]
dev = [
    "black>=24.8.0",
    "httpx>=0.27.0",
    "requests>=2.32.0",
    "pytest>=7.4",
    "ruff>=0.6.0",
    "wheel>=0.41",
]
qiskit = ["qiskit>=1.2.0", "qiskit-aer>=0.15.0", "qiskit-ibm-runtime>=0.24.0"]
braket = ["amazon-braket-sdk>=1.75.0", "amazon-braket-default-simulator>=1.22.0"]
ionq = ["qiskit-ionq>=0.4.7"]

[tool.setuptools.packages.find]
include = ["synqc_backend", "synqc_backend.*"]

[build-system]
requires = ["setuptools>=61.0", "wheel>=0.41.0"]
build-backend = "setuptools.build_meta"

[tool.synqc]
# Custom section to remind future us about safety and design choices.
max_shots_per_experiment = 200000
max_shots_per_session = 1000000
